updated readme + logger config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = python_template
+name = airflow_template
 version = 0.1.0
 author = Neel Roshania
 author_email = nroshania@gmail.com
@@ -8,7 +8,7 @@ platform = unix, linux, osx, cygwin, win64
 
 [options]
 packages =
-    python_template
+    airflow_template
 install_requires =
     ipykernel
     configparser
