--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -1,6 +1,6 @@
-# define loggers to call
+# define loggers
 [loggers]
-keys=root,main,airflow_template
+keys=root,main,init,funcs
 
 [handlers]
 keys=consoleHandler,fileHandler
@@ -8,21 +8,27 @@ keys=consoleHandler,fileHandler
 [formatters]
 keys=simpleFormatter
 
-# define loggers - should align with package name to preserve logger hierarchical referecing
+# specify loggers here
 [logger_root]
 level=DEBUG
 handlers=consoleHandler
 
-[logger_main] # logger specific to scripted applications where __name__ == "__main__"
+[logger_main] # logger specific to "__main__" calls
 level=DEBUG
 handlers=consoleHandler,fileHandler
 qualname=__main__
 propagate=0
 
-[logger_airflow_template] # loggers specific to installed module fuctions
+[logger_init] # logger specific to init calls "airflow_template"
 level=DEBUG
 handlers=consoleHandler,fileHandler
 qualname=airflow_template
+propagate=0
+
+[logger_funcs] # logger specific to airflow_template.funcs (see qualname, https://docs.python.org/3/library/logging.config.html)
+level=DEBUG
+handlers=fileHandler
+qualname=airflow_template.funcs
 propagate=0
 
 # define handler parameters - https://docs.python.org/3/library/logging.handlers.html#module-logging.handlers
